--- a/blogger/Gemfile
+++ b/blogger/Gemfile
@@ -17,7 +17,7 @@ gem 'coffee-rails', '~> 4.2'
 # gem 'therubyracer', platforms: :ruby
 
 gem "paperclip"
-
+gem "sorcery"
 
 # Use jquery as the JavaScript library
 gem 'jquery-rails'
